--- a/book.toml
+++ b/book.toml
@@ -11,7 +11,7 @@ create-missing = false
 build-dir = "book"
 
 [output.html]
-no-section-label = false
+no-section-label = true
 git-repository-url = "https://github.com/Seasawher/lean-book"
 
 # This is required to add "Run on Lean4 Playground" button to each page
