--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -11,6 +11,16 @@
    "inputRev": "main",
    "inherited": false,
    "configFile": "lakefile.toml"},
+  {"url": "https://github.com/leanprover-community/ProofWidgets4.git",
+   "type": "git",
+   "subDir": null,
+   "scope": "",
+   "rev": "556caed0eadb7901e068131d1be208dd907d07a2",
+   "name": "proofwidgets",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": false,
+   "configFile": "lakefile.lean"},
   {"url": "https://github.com/Seasawher/mdgen",
    "type": "git",
    "subDir": null,
@@ -21,6 +31,16 @@
    "inputRev": "main",
    "inherited": false,
    "configFile": "lakefile.lean"},
+  {"url": "https://github.com/leanprover-community/batteries",
+   "type": "git",
+   "subDir": null,
+   "scope": "leanprover-community",
+   "rev": "3881bc95874e5843b76886ea136f4722f1fa83cf",
+   "name": "batteries",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "v4.24.0-rc1",
+   "inherited": true,
+   "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover/lean4-cli.git",
    "type": "git",
    "subDir": null,
